--- a/dashboard.html
+++ b/dashboard.html
@@ -37,7 +37,7 @@
         <div class="flex mt-2 gap-2">
           <button id="copy-ref" class="flex-1 bg-yellow-500 text-black px-3 py-1 rounded text-sm font-bold hover:bg-yellow-400 transition">Copy</button>
         </div>
-        <p id="ref-count" class="text-xs text-green-600 mt-2">Total Referral: 0</p>
+        <p id="ref-count" class="text-xs text-green-400 mt-2 font-bold">Total Referral: 0</p>
       </div>
 
       <!-- Reward -->
