--- a/dashboard.html
+++ b/dashboard.html
@@ -58,8 +58,17 @@
     </div>
 
     <!-- Logout -->
-    <div class="text-center">
+    <div class="text-center mb-6">
       <button id="logout" class="bg-red-500 px-4 py-2 rounded-lg font-bold hover:bg-red-400 transition-all shadow-md">Logout</button>
+    </div>
+
+    <!-- Sosial Media -->
+    <div class="text-center space-y-3">
+      <p class="text-sm text-gray-400">Ikuti kami di sosial media:</p>
+      <div class="flex justify-center gap-4">
+        <a href="https://facebook.com/YourPage" target="_blank" class="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded-lg font-bold text-sm shadow-md transition">Facebook</a>
+        <a href="https://t.me/YourTelegram" target="_blank" class="bg-sky-500 hover:bg-sky-400 px-4 py-2 rounded-lg font-bold text-sm shadow-md transition">Telegram</a>
+      </div>
     </div>
   </div>
 
