--- a/dashboard.html
+++ b/dashboard.html
@@ -67,7 +67,7 @@
       <p class="text-sm text-gray-400">Ikuti kami di sosial media:</p>
       <div class="flex justify-center gap-4">
         <a href="https://facebook.com/YourPage" target="_blank" class="bg-blue-600 hover:bg-blue-500 px-4 py-2 rounded-lg font-bold text-sm shadow-md transition">Facebook</a>
-        <a href="https://t.me/YourTelegram" target="_blank" class="bg-sky-500 hover:bg-sky-400 px-4 py-2 rounded-lg font-bold text-sm shadow-md transition">Telegram</a>
+        <a href="https://t.me/+68w4eex3ptQ0MTll" target="_blank" class="bg-sky-500 hover:bg-sky-400 px-4 py-2 rounded-lg font-bold text-sm shadow-md transition">Telegram</a>
       </div>
     </div>
   </div>
