--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     <!-- FOOTER -->
     <footer class="py-8 text-center text-sm text-gray-400">
-      © 2025 Indomon Quest. All rights reserved. • <a class="text-gray-200 underline" href="mailto:indomonquest@gmail.com">indomonquest@gmail.com</a>
+      © 2025 Indomon Quest. All rights reserved.
     </footer>
   </main>
 
@@ -397,3 +397,4 @@ document.getElementById("google-logout")?.addEventListener("click", async () => 
 </body>
 
 </html>
+
